--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,6 +31,7 @@
   * {
     outline-color: transparent;
     scrollbar-width: thin;
+    scroll-behavior: smooth;
   }
 
   :focus-visible {
@@ -67,27 +68,25 @@
     position: relative;
     background-color: theme(colors.black.soft);
     isolation: isolate;
+  }
+  .app__main {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    overflow-y: auto;
+    scroll-padding: 150px;
+    padding: calc(148px + var(--safe-area-inset-top)) 20px
+      calc(101px + 40px + var(--safe-area-inset-bottom));
 
-    &__main {
-      display: flex;
-      flex-direction: column;
-      height: 100%;
-      overflow-y: auto;
-      scroll-behavior: smooth;
-      scroll-padding: 150px;
-      padding: calc(148px + var(--safe-area-inset-top)) 20px
-        calc(77px + 12px + 40px + var(--safe-area-inset-bottom));
-
-      > * {
-        flex-shrink: 0;
-      }
+    > * {
+      flex-shrink: 0;
     }
   }
 
   .glass {
-    /*overflow: hidden;*/
     position: relative;
     isolation: isolate;
+    transform: translateZ(0);
 
     &::before {
       content: "";
@@ -105,7 +104,6 @@
       inset: 0;
       z-index: -10;
       border-radius: inherit;
-      /*mix-blend-mode: overlay;*/
       box-shadow:
         0 0 1px 1px hsl(0 0% 100% / 0.8) inset,
         1px 1px 6px 1px hsl(0 0% 0% / 0.2) inset;
